[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 123.769, 119.777 )

[node name="Arrow" type="Sprite" index="0"]

position = Vector2( 50, 50 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

visible = false
position = Vector2( 3.90953, -1.71909 )
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]

[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]


