[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/LevelGridItem.gd" type="Script" id=1]
[ext_resource path="res://Resources/PedestalWhite.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=3]
[ext_resource path="res://Resources/Code New Roman.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

size = 200
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="LevelGridItem" type="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 400.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin" ]
label_text = ""
level_path = ""

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 200, 200 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="Label" type="Label" parent="TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 30.0
margin_right = 400.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.332031, 0.332031, 0.332031, 1 )
text = "1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[connection signal="gui_input" from="TextureRect" to="TextureRect" method="_on_gui_input"]

[connection signal="mouse_entered" from="TextureRect" to="TextureRect" method="_on_mouse_entered"]

[connection signal="mouse_exited" from="TextureRect" to="TextureRect" method="_on_mouse_exited"]

[connection signal="pressed" from="TextureRect" to="." method="_on_TextureRect_pressed"]


